--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
     <!-- Bootstrap core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/yeti/bootstrap.min.css" rel="stylesheet">
 
+
+
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+
+    <!-- Google Font family -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top text-white">
-      <a class="navbar-brand" href="#"><img src="images/LogoIcon.png">Carlos Arrivas</a>
+  
+    <nav class="navbar navbar-expand-md navbar-trans fixed-top">
+      <a class="navbar-brand" href="#"><img src="images/LogoIcon.png"></a>
+      <h1>Carlos Arrivas</h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation"  >
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,7 +58,8 @@
     <main role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <!-- <div class="jumbotron"> -->
+        <div class="headerZone">
         <div class="container">
           <h1 class="display-5">UX/UI/FE Dev Generalist</h1>
           <p></p>
